--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,10 @@
 rootProject.name = "moviefun"
 
 include "applications:movie-fun-app"
+include "applications:movie-service"
+include "applications:album-service"
 
+include "components:blobstore"
 include "components:albums"
 include "components:movies"
+include "components:movie-fun-api"
