Create cf-support component

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include "components:blobstore"
 include "components:albums"
 include "components:movies"
 include "components:movie-fun-api"
+include "components:cf-support"
